--- a/why-exhibit.html
+++ b/why-exhibit.html
@@ -1,21 +1,75 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why Exhibit - QELE 2026</title>
+    <meta name="description" content="Exhibit at the leading student recruitment fair and education exhibition in Doha. Connect with thousands of students and parents from across the Gulf region. Book your booth today.">
+    <title>Exhibit at Qatar's Top Student Recruitment Fair | EduExpo Qatar 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/why-exhibit.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "EduExpo Qatar 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Exhibitors",
+          "item": "/why-exhibit.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Why Exhibit"
+        }]
+      }
+    ]
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -70,7 +124,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Why Exhibit at QELE 2026?</h1>
+                <h1>Exhibit at the Leading Student Recruitment Fair in the Gulf</h1>
                 <p>Connect with the future of education in the MENA region.</p>
             </div>
         </section>
@@ -96,7 +150,7 @@
                         <p>Shape the education agenda by hosting workshops, joining panel discussions, and presenting your vision to a captive audience.</p>
                     </div>
                      <div class="benefit-card partnership-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.png" alt="QELE Mascot" class="card-top-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.png" alt="EduExpo Qatar's owl mascot flying above the strategic partnerships card." class="card-top-mascot">
                         <i class="fas fa-handshake"></i>
                         <h3>Strategic Partnerships</h3>
                         <p>Network with K-12 principals, university deans, government officials, and investors to forge powerful new alliances.</p>
@@ -111,7 +165,7 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
-                <p class="subtitle">If you provide solutions for the education ecosystem, QELE is your platform.</p>
+                <p class="subtitle">If you provide solutions for the education ecosystem, EduExpo Qatar is your platform.</p>
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
                         <i class="fas fa-university"></i>
@@ -138,7 +192,7 @@
                         <p>Education Consultants</p>
                     </div>
                 </div>
-                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762095342/Untitled_design_-_2025-11-02T202158.795_mpfkzr.png" alt="QELE Mascot" class="exhibit-footer-mascot">
+                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762095342/Untitled_design_-_2025-11-02T202158.795_mpfkzr.png" alt="EduExpo Qatar's owl mascot peeking from the side of the 'Who Should Exhibit' section." class="exhibit-footer-mascot">
             </div>
         </section>
     </main>
@@ -147,7 +201,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -192,7 +246,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
