--- a/about.html
+++ b/about.html
@@ -1,11 +1,23 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover why Qatar Education Expo is the leading Gulf education exhibition and international university fair. Learn about opportunities to study abroad in the Middle East (study in UK, study in Canada) and connect with the thriving GCC education market at this premier student recruitment fair.">
     <title>About Qatar's Premier Education Expo | Study Abroad Middle East | Gulf Education Exhibition</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/about.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,14 +119,14 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>A $100 Billion Education Market on the Rise</h1>
+                <h1>Qatar's Premier Education Expo & International University Fair</h1>
                 <p>Position your institution at the forefront of a rapidly growing, high-demand region.</p>
             </div>
         </section>
 
         <section id="about-expo">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
                  <!-- Market Opportunity -->
                 <div id="market-opportunity">
                     <div class="market-opportunity-grid">
