--- a/booth-registration.html
+++ b/booth-registration.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Book your exhibitor booth for Qatar Education Expo 2026, the premier university expo in the GCC. Secure your space at MENA's leading student recruitment fair and connect with students, parents, and industry leaders.">
     <title>Book Your Booth | Exhibitor Registration | Qatar Education Expo 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/booth-registration.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="alternate" hreflang="en-QA" href="/booth-registration.html" />
-    <link rel="alternate" hreflang="ar-QA" href="/ar/booth-registration.html" />
-    <link rel="alternate" hreflang="x-default" href="/booth-registration.html" />
 <script type="importmap">
 {
   "imports": {
@@ -109,11 +118,6 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="language-switcher">
-                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
-                        <span class="lang-separator">|</span>
-                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
-                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
@@ -257,7 +261,7 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
     </main>
 
     <footer class="main-footer">
