--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -151,7 +151,7 @@
                         <p>Engaged Attendees</p>
                     </div>
                     <div class="stat-card countries-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
                         <i class="fas fa-globe-americas"></i>
                         <h4>25+</h4>
                         <p>Countries Reached</p>
@@ -213,7 +213,7 @@
 
                     <div class="exposure-content-panels">
                         <div id="pre-event" class="exposure-content active pre-event-panel-with-mascot">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-tech.2_qxwqmx.png" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.png" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
                             <h3>Build Momentum, Generate Leads</h3>
                             <div class="exposure-panel-grid">
                                 <div class="exposure-benefit-item"><i class="fas fa-globe"></i> <h4>Website Feature</h4> <p>Logo and link on the official Qatar Education Expo website.</p></div>
