--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                     </div>
                     <!-- Card 3: WhatsApp -->
                      <div class="contact-card quick-chat-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot wearing a headset, representing the quick chat support option." class="contact-quick-chat-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot wearing a headset, representing the quick chat support option." class="contact-quick-chat-mascot">
                         <i class="fab fa-whatsapp"></i>
                         <h4>Quick Chat</h4>
                         <p>For quick questions, connect with us directly on WhatsApp.</p>
@@ -217,7 +217,7 @@
                 <h2>Quick Answers</h2>
                 <div class="faq-accordion">
                     <div class="faq-item faq-item-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot with a question mark, inviting users to check the FAQ." class="contact-faq-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot with a question mark, inviting users to check the FAQ." class="contact-faq-mascot">
                         <button class="faq-question" aria-expanded="false">
                             <span>How do I register as a student?</span>
                             <i class="fas fa-plus"></i>
