--- a/school-group-registration.html
+++ b/school-group-registration.html
@@ -143,23 +143,23 @@
                 </div>
 
                 <form id="school-group-registration-form" novalidate style="background: var(--white); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); color: var(--text-color); box-shadow: var(--shadow);">
-                    <input type="hidden" name="form_source" value="School Group Registration">
+                    <input type="hidden" name="Form Source" value="School Group Registration">
 
                     <div class="form-group">
                         <label for="form-school-name">School Name *</label>
-                        <input type="text" id="form-school-name" name="school_name" required>
+                        <input type="text" id="form-school-name" name="School Name" required>
                         <div class="error-message"></div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
                             <label for="form-school-contact-name">Contact Person Name (Teacher/Counselor) *</label>
-                            <input type="text" id="form-school-contact-name" name="contact_name" required>
+                            <input type="text" id="form-school-contact-name" name="Contact Name" required>
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
                             <label for="form-school-country">Country *</label>
-                            <select id="form-school-country" name="country" required>
+                            <select id="form-school-country" name="Country" required>
                                 <option value="" disabled selected>Select country</option>
                                 <option value="Qatar">Qatar</option>
                                 <option value="Other">Other</option>
@@ -171,12 +171,12 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="form-school-email">Contact Email *</label>
-                            <input type="email" id="form-school-email" name="email" required>
+                            <input type="email" id="form-school-email" name="Email" required>
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
                             <label for="form-school-phone">Contact Phone Number *</label>
-                            <input type="tel" id="form-school-phone" name="phone" required>
+                            <input type="tel" id="form-school-phone" name="Phone" required>
                             <div class="error-message"></div>
                         </div>
                     </div>
@@ -184,24 +184,24 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="form-school-student-count">Approx. Number of Students *</label>
-                            <input type="number" id="form-school-student-count" name="student_count" required min="1">
+                            <input type="number" id="form-school-student-count" name="Student Count" required min="1">
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
                             <label for="form-school-grade-level">Grade Level(s) *</label>
-                            <input type="text" id="form-school-grade-level" name="grade_level" required placeholder="e.g., Grades 11-12">
+                            <input type="text" id="form-school-grade-level" name="Grade Level" required placeholder="e.g., Grades 11-12">
                             <div class="error-message"></div>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label for="form-school-staff-count">Number of Accompanying Staff (Optional)</label>
-                        <input type="number" id="form-school-staff-count" name="staff_count" min="0">
+                        <input type="number" id="form-school-staff-count" name="Staff Count" min="0">
                     </div>
 
                     <div class="form-group">
                         <label for="form-school-visit-date">Preferred Visit Date *</label>
-                        <select id="form-school-visit-date" name="visit_date" required>
+                        <select id="form-school-visit-date" name="Visit Date" required>
                             <option value="" disabled selected>Select a date...</option>
                             <option value="April 19, 2026">April 19, 2026</option>
                             <option value="April 20, 2026">April 20, 2026</option>
@@ -211,11 +211,11 @@
                     
                     <div class="form-group">
                         <label for="form-school-message">Message / Questions (Optional)</label>
-                        <textarea id="form-school-message" name="message" rows="4"></textarea>
+                        <textarea id="form-school-message" name="Message" rows="4"></textarea>
                     </div>
                     
                     <div class="form-group form-group-consent">
-                        <input type="checkbox" id="form-school-consent" name="consent" required>
+                        <input type="checkbox" id="form-school-consent" name="Consent" required>
                         <label for="form-school-consent">I confirm that I am authorized to register on behalf of my school and agree to be contacted by the Qatar Education Expo team. *</label>
                         <div class="error-message"></div>
                     </div>
@@ -224,7 +224,7 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot guiding school groups to the registration form." class="school-group-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot guiding school groups to the registration form." class="school-group-reg-mascot">
     </main>
 
     <footer class="main-footer">
