--- a/school-group-registration.html
+++ b/school-group-registration.html
@@ -224,7 +224,7 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot guiding school groups to the registration form." class="school-group-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot guiding school groups to the registration form." class="school-group-reg-mascot">
     </main>
 
     <footer class="main-footer">
