--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -80,15 +80,16 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -100,6 +101,7 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
+                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -151,7 +153,7 @@
                         <p>Engaged Attendees</p>
                     </div>
                     <div class="stat-card countries-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.webp" alt="Qatar Education Expo's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
                         <i class="fas fa-globe-americas"></i>
                         <h4>25+</h4>
                         <p>Countries Reached</p>
@@ -213,7 +215,7 @@
 
                     <div class="exposure-content-panels">
                         <div id="pre-event" class="exposure-content active pre-event-panel-with-mascot">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.png" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
                             <h3>Build Momentum, Generate Leads</h3>
                             <div class="exposure-panel-grid">
                                 <div class="exposure-benefit-item"><i class="fas fa-globe"></i> <h4>Website Feature</h4> <p>Logo and link on the official Qatar Education Expo website.</p></div>
