--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -80,18 +80,20 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
+                            <li><a href="qatar-expo-hackathon.html">Hackathon 2026</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
@@ -99,6 +101,7 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
+                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -158,7 +161,7 @@
                 <p class="subtitle">Qatar offers accessible visa options for visitors from around the world. Please review the requirements applicable to your nationality.</p>
                 <div class="content-grid">
                     <div class="content-card hayya-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762080864/Untitled_design_-_2025-11-02T161534.918_idrjbh.png" alt="Qatar Education Expo's owl mascot dressed as a pilot, providing information on visa and entry." class="visa-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762080864/Untitled_design_-_2025-11-02T161534.918_idrjbh.webp" alt="Qatar Education Expo's owl mascot dressed as a pilot, providing information on visa and entry." class="visa-mascot">
                         <h3><i class="fas fa-passport"></i> Hayya Platform</h3>
                         <p>For many nationalities, the Hayya platform is the main portal for entry visas. It offers a streamlined digital service for tourists and event attendees.</p>
                         <a href="https://hayya.qa/" class="btn btn-primary" target="_blank">Visit Hayya Portal</a>
@@ -311,11 +314,68 @@
             </div>
         </div>
     </footer>
-    
+
     <!-- WhatsApp Chat -->
     <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
+
+    <!-- Exit Intent Modal -->
+    <div id="exit-intent-modal" class="modal-overlay">
+        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
+            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
+            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
+        </div>
+    </div>
+
+    <!-- Deck Request Modal -->
+    <div id="deck-request-modal" class="modal-overlay">
+        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <div id="deck-form-container">
+                <h3 id="deck-modal-title">Get The Official Deck</h3>
+                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
+                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
+                    <input type="hidden" name="form_source" value="Deck Request Popup">
+                    <div class="form-group">
+                        <label for="deck-form-name">Full Name *</label>
+                        <input type="text" id="deck-form-name" name="name" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="deck-form-email">Work Email *</label>
+                        <input type="email" id="deck-form-email" name="email" required>
+                        <div class="error-message"></div>
+                    </div>
+                     <div class="form-group">
+                        <label for="deck-form-phone">Mobile Number *</label>
+                        <input type="tel" id="deck-form-phone" name="phone" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="deck-form-designation">Designation *</label>
+                            <input type="text" id="deck-form-designation" name="designation" required>
+                            <div class="error-message"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="deck-form-organization">Organization *</label>
+                            <input type="text" id="deck-form-organization" name="organization" required>
+                            <div class="error-message"></div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
+                </form>
+            </div>
+            <div id="deck-form-success" style="display: none; text-align: center;">
+                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
+                <h3>Thank You!</h3>
+                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
+            </div>
+        </div>
+    </div>
     
     <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
