--- a/about.html
+++ b/about.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover why Qatar Education Expo is the leading Gulf education exhibition and international university fair. Learn about opportunities to study abroad in the Middle East (study in UK, study in Canada) and connect with the thriving GCC education market at this premier student recruitment fair.">
@@ -30,7 +39,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -59,12 +68,19 @@
       }
     ]
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body class="about-page">
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -75,19 +91,20 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
-                           <li><a href="school-group-registration.html">School Group Registration</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
+                            <li><a href="qatar-expo-hackathon.html">Hackathon 2026</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
@@ -126,7 +143,7 @@
 
         <section id="about-expo">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
                  <!-- Market Opportunity -->
                 <div id="market-opportunity">
                     <div class="market-opportunity-grid">
@@ -167,7 +184,7 @@
                             </ul>
                         </div>
                         <div class="why-qatar-image">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.jpg" alt="Stunning modern skyline of Doha, Qatar at dusk.">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp" alt="Stunning modern skyline of Doha, Qatar at dusk.">
                         </div>
                     </div>
                 </div>
@@ -179,7 +196,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
