--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Amplify your brand's reach to over 1 million impressions at the premier Gulf Education Exhibition, Qatar Education Expo 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.">
@@ -30,7 +39,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -64,12 +73,19 @@
       }
     ]
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -101,7 +117,6 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
-                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -169,7 +184,7 @@
                 <p class="subtitle">Our attendees are engaged, influential, and ready to discover the future of education. Here's who you'll meet.</p>
                 <div class="audience-grid">
                     <div class="audience-card">
-                        <img src="https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Photo of an ambitious student smiling and looking towards their future." class="audience-avatar">
+                        <img src="https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=400&fm=webp" alt="Photo of an ambitious student smiling and looking towards their future." class="audience-avatar">
                         <div class="audience-card-content">
                             <h4><i class="fas fa-user-graduate"></i> The Ambitious Student</h4>
                             <p>Grades 11-12, actively researching international universities and career paths. Tech-savvy and future-focused.</p>
@@ -271,7 +286,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
